--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
    <head>
       <meta charset = "UTF-8">
       <meta key="viewport" name="viewport" content="width=device-width, initial-scale=1" />
-      <title>Carzy Cards</title>
+      <title>Bud</title>
+      <script src='bundle.js' async></script>
    </head>
-   <body class="h-screen bg-almost-beige">
+   <body>
       <div id = "root"></div>
-      <script src='bundle.js'></script>
    </body>
 </html>
